# ChangeLog for dev-perl/wxperl
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/wxperl/ChangeLog,v 1.13 2007/01/28 03:06:39 dirtyepic Exp $

  28 Jan 2007; Ryan Hill <dirtyepic@gentoo.org> wxperl-0.27.ebuild:
  Fix dep wxGTK -> wxGTK-2.6

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org> -wxperl-0.22.ebuild,
  wxperl-0.27.ebuild, -wxperl-0.56.ebuild, wxperl-0.57.ebuild:
  Marking amd64 stable; cleaning up ebuilds

*wxperl-0.57 (04 Sep 2006)

  04 Sep 2006; Yuval Yaari <yuval@gentoo.org> +wxperl-0.57.ebuild:
  Version bump

  20 Aug 2006; Yuval Yaari <yuval@gentoo.org> wxperl-0.56.ebuild:
  Just noticed (and made sure) wxGTK-2.6.2-r1 is sufficient

*wxperl-0.56 (16 Aug 2006)

  16 Aug 2006; <yuval@gentoo.org> +wxperl-0.56.ebuild:
  (Bug #143478) version bump

  05 Jul 2006; Christian Hartmann <ian@gentoo.org> wxperl-0.22.ebuild,
  wxperl-0.27.ebuild:
  Fixed RDEPEND wrt bug #134781

  24 Jun 2006; Michael Cummings <mcummings@gentoo.org> wxperl-0.22.ebuild,
  wxperl-0.27.ebuild:
  Removing perl-core/ExtUtils-MakeMaker

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> wxperl-0.27.ebuild:
  Mark 0.27 ~ia64

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> wxperl-0.27.ebuild:
  Mark 0.27 ~ia64

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org> wxperl-0.22.ebuild,
  wxperl-0.27.ebuild:
  Virtuals for perl-core

*wxperl-0.27 (13 Jan 2006)

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org> +wxperl-0.27.ebuild:
  Version bump upstream

  25 May 2005; Michael Cummings <mcummings@gentoo.org> wxperl-0.22.ebuild:
  dev-perl/ExtUtils-MakeMaker => perl-core/ExtUtils-MakeMaker migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> wxperl-0.22.ebuild:
  dev-perl/File-Spec => perl-core/File-Spec migration

*wxperl-0.22 (02 May 2005)

  02 May 2005; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +wxperl-0.22.ebuild: