@@ -1,0 +1,3 @@
+MD5 f45482ff8b73de2931b1c8dcd53a5d02 Wx-0.69.tar.gz 311758
+RMD160 922fbbc213d552eb73a58ab92a9ea5232cde61c5 Wx-0.69.tar.gz 311758
+SHA256 7429bc25732bc9694a8e9b3405cee24dc8456892767303da1e7677e0785639dc Wx-0.69.tar.gz 311758
