@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/wxperl
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/wxperl/ChangeLog,v 1.13 2007/01/28 03:06:39 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/wxperl/ChangeLog,v 1.14 2007/03/19 14:57:11 yuval Exp $
+
+*wxperl-0.69 (19 Mar 2007)
+
+  19 Mar 2007; <yuval@gentoo.org> +wxperl-0.69.ebuild:
+  Long awaited version bump
 
   28 Jan 2007; Ryan Hill <dirtyepic@gentoo.org> wxperl-0.27.ebuild:
   Fix dep wxGTK -> wxGTK-2.6
